--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,7 +25,7 @@
         <input type="button" value="Reset" onclick="resetAllCheckboxes()" />
         <fieldset>
           <details>
-            <summary>Brand</summary>
+            <summary>브랜드</summary>
             <div>
               <div>
                 <input
@@ -62,7 +62,7 @@
         <input type="hidden" name="brand" id="brandInput" value="" />
         <fieldset>
           <details>
-            <summary>Size</summary>
+            <summary>화면 크기</summary>
             <div>
               <div>
                 <input
@@ -99,7 +99,7 @@
         <input type="hidden" name="size" id="sizeInput" value="" />
         <fieldset>
           <details>
-            <summary>Panel</summary>
+            <summary>화면 종류</summary>
             <div>
               <div>
                 <input
@@ -136,7 +136,7 @@
         <input type="hidden" name="panel" id="panelInput" value="" />
         <fieldset>
           <details>
-            <summary>Resolution</summary>
+            <summary>해상도</summary>
             <div>
               <div>
                 <input
@@ -173,6 +173,79 @@
           </details>
         </fieldset>
         <input type="hidden" name="resolution" id="resolutionInput" value="" />
+        <fieldset>
+          <details>
+            <summary>출시년도</summary>
+            <div>
+              <div>
+                <input
+                  id="select-all-release-year"
+                  type="checkbox"
+                  onclick="toggleSelectAllReleaseYear(this)"
+                />
+                <label for="select-all-release-year">All</label>
+              </div>
+              {% for release_year in release_years %}
+              <div class="filter-container">
+                <input
+                  id="release-year-{{ loop.index }}"
+                  data-name="release-year"
+                  type="checkbox"
+                  value="{{ release_year }}"
+                  {%
+                  if
+                  release_year
+                  in
+                  selected_release_years
+                  %}checked{%
+                  endif
+                  %}
+                />
+                <label
+                  for="release-year-{{ loop.index }}"
+                  title="{{ release_year }}"
+                  >{{ release_year }}</label
+                >
+              </div>
+              {% endfor %}
+            </div>
+          </details>
+        </fieldset>
+        <input
+          type="hidden"
+          name="release_year"
+          id="releaseYearInput"
+          value=""
+        />
+
+        <fieldset>
+          <details>
+            <summary>기타</summary>
+            <div>
+              <div>
+                <input
+                  id="select-all-others"
+                  type="checkbox"
+                  onclick="toggleSelectAllOthers(this)"
+                />
+                <label for="select-all-others">All</label>
+              </div>
+              <div class="filter-container">
+                <input id="other-smart-tv" data-name="other" type="checkbox"
+                value="smart_tv" {% if "smart_tv" in selected_others %}checked{%
+                endif %} />
+                <label for="other-smart-tv">스마트 TV</label>
+              </div>
+              <div class="filter-container">
+                <input id="other-game-mode" data-name="other" type="checkbox"
+                value="game_mode" {% if "game_mode" in selected_others
+                %}checked{% endif %} />
+                <label for="other-game-mode">게임모드</label>
+              </div>
+            </div>
+          </details>
+        </fieldset>
+        <input type="hidden" name="other" id="otherInput" value="" />
 
         <input type="submit" value="Filter" />
       </form>
